retrieveUnpackaged/objects/Integration_Picklist__c.object
<CustomObject>
    <description>Values for integration picklists.</description>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Used for updates by Data Loader only.</description>
        <displayFormat>IP-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Used for updates by Data Loader only.</inlineHelpText>
        <label>External Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Integration_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked, no value is available in the picklist in SFDC for this Integraton Value. Otherwise a picklist value must be provided.</description>
        <inlineHelpText>If this checkbox is checked, no value is available in the picklist in SFDC for this Integraton Value. Otherwise a picklist value must be provided.</inlineHelpText>
        <label>Integration Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Mapping__c</fullName>
        <label>Picklist Mapping</label>
        <referenceTo>Picklist_Mapping__c</referenceTo>
        <relationshipLabel>Integration Picklists</relationshipLabel>
        <relationshipName>Integration_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <description>The picklist value from SFDC.</description>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detail_View</fullName>
        <columns>NAME</columns>
        <columns>External_Key__c</columns>
        <columns>Integration_Only__c</columns>
        <columns>Picklist_Mapping__c</columns>
        <columns>Picklist_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail View</label>
    </listViews>
    <nameField>
        <label>Integration Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Integration_Only_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Integration_Only__c) &amp;&amp; ( Integration_Only__c || ISBLANK( Picklist_Value__c ))</errorConditionFormula>
        <errorMessage>If Integration Only is not checked, you have to define a Picklist Value, otherwise you may or may not define a Picklist value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Integration_Value_Syntax</fullName>
        <active>true</active>
        <description>Checks the integration value syntax.</description>
        <errorConditionFormula>NOT(REGEX( Name , &quot;[A-Z0-9_]+&quot;))</errorConditionFormula>
        <errorMessage>The Integration Value may consist of latin upper cases, arabic numbers and underlines only.</errorMessage>
    </validationRules>
</CustomObject>